src/components/card/themes/card.actions.base.scss
@use 'styles/common/component';
@use 'styles/utilities' as *;

:host {
    display: flex;
    flex-flow: column nowrap;
    align-items: flex-end;
    justify-content: space-between;
    padding: rem(8px);
    flex-basis: min-content;
}

:host(:not([orientation='vertical'])) {
    flex-flow: row wrap;
    align-items: center;

    ::slotted(igc-icon-button:not(:first-of-type)),
    ::slotted(igc-button:not(:first-of-type)),
    ::slotted(igc-icon:not(:first-of-type)) {
        margin-inline-start: rem(8px);
    }
}

::slotted([slot='start']) {
    display: flex;
    align-items: center;
    order: 0;
}

::slotted([slot='end']) {
    display: flex;
    align-items: center;
    margin-inline-start: auto;
    order: 1;
}

::slotted(igc-icon) {
    opacity: .6;
}

